fix buttons on ios

--- a/frontend-public/src/App.css
+++ b/frontend-public/src/App.css
@@ -37,12 +37,10 @@ h1 {
   background-color: #f5d443;
   color: #111;
   border: 1px solid #514308;
-  border-radius: 0.4em;
+  border-radius: 40px;
   font-size: 1.2em;
-  height: 4vmin;
-  min-width: 40px;
-  min-height: 40px;
-  width: 4vmin;
+  width: 50px;
+  height: 50px;
   cursor: pointer;
   text-align: center;
 }
